<resources>
    <string name="app_name">AcheronJavaSQLite</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="login_btn">Log me in!</string>
    <string name="register_btn">Register me!</string>
    <string name="cancel_btn">Cancel</string>
    <string name="register_label">Register Account</string>
    <string name="list_title_label">Gratz!!! you got here!</string>

</resources>
