<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raskae.examples.acheronjavasqlite.features.registeruser.RegisterUserActivity">

    <TextView
        android:id="@+id/titleReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register_label" />

    <EditText
        android:id="@+id/inputUsernameReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:ems="10"
        android:hint="@string/username_label"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUsernameReg"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/inputEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPasswordReg"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:onClick="register"
        android:text="@string/register_btn" />

    <Button
        android:id="@+id/cancelRegBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/registerBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:onClick="cancel"
        android:text="@string/cancel_btn" />

</RelativeLayout>
